small front-end fixes Change date format for recurrent event change ribbon to not overlap the banner anymore && added box-shadow start harmonizing colors by importing cd-commons > must be discussed, tint seems to make quite.. darkish colors remove border-radius for share-event

--- a/web/public/css/_variables.less
+++ b/web/public/css/_variables.less
@@ -1,6 +1,8 @@
 @success-color: #3c763d;
 @error-color: #a94442;
 
+@import './../components/cd-common/common/colors.less';
+
 @tint-1: 20%;
 @cd-blue: #0093D5;
 @cd-light-blue: lighten(@cd-blue, @tint-1);;
@@ -27,6 +29,9 @@
 @cd-body-color-5: @cd-body-color-1;
 @cd-body-color-6: #FFA500;
 @background-color: #EEEEEE;
+
+@brand-primary: @cd-blue;
+@brand-info: @cd-light-blue;
 
 @state-success-bg: @cd-green;
 @state-success-text: @cd-white;
