--- a/web/public/js/directives/dojo/dojo-detail/style.less
+++ b/web/public/js/directives/dojo/dojo-detail/style.less
@@ -24,18 +24,17 @@
   &__ribbon {
     z-index: 5;
     float: left;
-    margin: 10px 0 0 -2px;
     clear: left;
     position: relative;
-    box-shadow: -2px 2px 7px rgba(0,0,0,.4);
     &--vertical-right {
       clear: none;
       float: right;
-      margin: -2px 10px 0 0;
+      margin: 0px 10px 0 0;
       text-align: center;
       width: 2.5em;
       height: 3.5em;
       line-height: 3.5em;
+      box-shadow: @cd-box-shadow;
 
       > img {
         margin: 0.5em 0;
