--- a/web/public/js/directives/event/share-event/style.less
+++ b/web/public/js/directives/event/share-event/style.less
@@ -11,6 +11,7 @@
         text-align: left;
         background-color: @cd-white;
         border-bottom: .1em solid @cd-light-gray;
+        border-radius: inherit;
         .fa {
           float: left;
           color: @cd-blue;
